<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_use_unit"
        android:title="@string/unit_change">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_use_metric"
                    android:title="@string/unit_metric" />
                <item
                    android:id="@+id/menu_use_imperial"
                    android:title="@string/unit_imperial" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/intro_menu_share"
        android:visible="false"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_save"
        android:title="@string/intro_menu_save" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/intro_menu_about" />
</menu>