<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="lt.ro.fachmann.lab1.BmiCalculatorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="hideKeyboard">

        <ImageView
            android:id="@+id/gradient_background"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/intro_form_background_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.2"
            android:background="@drawable/form_background"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/text_ask_mass"
            android:layout_width="@dimen/intro_ask_label_width"
            android:layout_height="@dimen/form_height"
            android:layout_marginStart="@dimen/intro_horizontal_spacing"
            android:layout_marginTop="@dimen/intro_vertical_spacing"
            android:alpha="1.0"
            android:gravity="center|startMillis"
            android:text="@string/intro_label_ask_mass" />

        <EditText
            android:id="@+id/edit_mass"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/form_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/intro_horizontal_spacing"
            android:layout_marginStart="@dimen/intro_horizontal_spacing"
            android:layout_marginTop="@dimen/intro_vertical_spacing"
            android:layout_toEndOf="@+id/text_ask_mass"
            android:hint="@string/mass"
            android:inputType="numberDecimal"
            android:maxLength="8" />

        <TextView
            android:id="@+id/text_ask_height"
            android:layout_width="@dimen/intro_ask_label_width"
            android:layout_height="@dimen/form_height"
            android:layout_below="@id/edit_mass"
            android:layout_marginStart="@dimen/intro_horizontal_spacing"
            android:gravity="center|startMillis"
            android:text="@string/intro_label_ask_heigth" />

        <EditText
            android:id="@+id/edit_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/form_height"
            android:layout_alignEnd="@+id/edit_mass"
            android:layout_alignStart="@+id/edit_mass"
            android:layout_below="@+id/edit_mass"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:maxLength="8" />


        <TextView
            android:id="@+id/text_yours_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_ask_height"
            android:layout_marginStart="@dimen/intro_horizontal_spacing"
            android:layout_marginTop="@dimen/form_height"
            android:text="@string/intro_yours_bmi" />

        <TextView
            android:id="@+id/text_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_yours_bmi"
            android:layout_marginEnd="@dimen/intro_spacing"
            android:layout_marginStart="@dimen/intro_spacing"
            android:layout_toEndOf="@+id/text_yours_bmi"
            android:textSize="@dimen/intro_text_h1" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_clear"
            android:layout_width="@dimen/intro_clear_button_size"
            android:layout_height="@dimen/intro_clear_button_size"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/edit_height"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/intro_vertical_spacing"
            android:layout_marginTop="@dimen/intro_clear_button_center"
            android:onClick="clear"
            android:src="@drawable/ic_delete_sweep" />


        <TextView
            android:id="@+id/text_about_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_clear"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/intro_horizontal_spacing"
            android:layout_marginStart="@dimen/intro_horizontal_spacing"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/intro_bmi_info" />

        <TextView
            android:id="@+id/bmi_table_underweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_about_bmi"
            android:layout_marginStart="@dimen/intro_table_margin"
            android:gravity="end"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_underweight_value"
            android:textColor="@color/bmiUnderweight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bmi_table_underweight"
            android:layout_toEndOf="@id/bmi_table_underweight"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_underweight_word" />

        <TextView
            android:id="@+id/bmi_table_norm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/bmi_table_underweight"
            android:layout_below="@id/bmi_table_underweight"
            android:gravity="end"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_norm_value"
            android:textColor="@color/bmiNorm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bmi_table_norm"
            android:layout_toEndOf="@id/bmi_table_norm"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_norm_word" />

        <TextView
            android:id="@+id/bmi_table_overweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/bmi_table_norm"
            android:layout_below="@id/bmi_table_norm"
            android:gravity="end"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_overweight_value"
            android:textColor="@color/bmiOverweight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bmi_table_overweight"
            android:layout_toEndOf="@id/bmi_table_overweight"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_overweight_word" />

        <TextView
            android:id="@+id/bmi_table_obesity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/bmi_table_overweight"
            android:layout_below="@id/bmi_table_overweight"
            android:gravity="end"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_obesity_value"
            android:textColor="@color/bmiObesity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bmi_table_obesity"
            android:layout_toEndOf="@id/bmi_table_obesity"
            android:padding="@dimen/about_table_text_padding"
            android:text="@string/bmi_obesity_word" />

    </RelativeLayout>

</ScrollView>